// @vitest-environment nuxt
import { describe, it, expect, test } from 'vitest'
import { axe } from 'vitest-axe'
import { mountSuspended } from '@nuxt/test-utils/runtime'
import { mount } from '@vue/test-utils'
import ComponentRender from '../component-render'
import type { RobotbasInputProps, RobotbasInputSlots } from '../../src/runtime/types'
import RobotbasInput from '../../src/runtime/components/RobotbasInput.vue'

describe('RobotbasInput', () => {
  // const sizes = Object.keys(theme.variants.size) as any
  // const variants = Object.keys(theme.variants.variant) as any

  it.each([
    // Props
    ['with id', { props: { id: 'id' } }],
    ['with name', { props: { name: 'name' } }],
    ['with type', { props: { type: 'password' } }],
    ['with placeholder', { props: { placeholder: 'Search...' } }],
    ['with disabled', { props: { disabled: true } }],
    ['with required', { props: { required: true } }],
    ['with file type', { props: { type: 'file' } }],
    ['with icon', { props: { icon: 'i-lucide-search' } }],
    ['with leading and icon', { props: { leading: true, icon: 'i-lucide-arrow-left' } }],
    ['with leadingIcon', { props: { leadingIcon: 'i-lucide-arrow-left' } }],
    ['with trailing and icon', { props: { trailing: true, icon: 'i-lucide-arrow-right' } }],
    ['with trailingIcon', { props: { trailingIcon: 'i-lucide-arrow-right' } }],
    ['with avatar', { props: { avatar: { src: 'https://github.com/benjamincanac.png' } } }],
    ['with avatar and leadingIcon', { props: { avatar: { src: 'https://github.com/benjamincanac.png' }, leadingIcon: 'i-lucide-arrow-left' } }],
    ['with avatar and trailingIcon', { props: { avatar: { src: 'https://github.com/benjamincanac.png' }, trailingIcon: 'i-lucide-arrow-right' } }],
    ['with loading', { props: { loading: true } }],
    ['with loading and avatar', { props: { loading: true, avatar: { src: 'https://github.com/benjamincanac.png' } } }],
    ['with loading trailing', { props: { loading: true, trailing: true } }],
    ['with loading trailing and avatar', { props: { loading: true, trailing: true, avatar: { src: 'https://github.com/benjamincanac.png' } } }],
    ['with loadingIcon', { props: { loading: true, loadingIcon: 'i-lucide-loader' } }],
    // ...sizes.map((size: string) => [`with size ${size}`, { props: { size } }]),
    // ...variants.map((variant: string) => [`with primary variant ${variant}`, { props: { variant } }]),
    // ...variants.map((variant: string) => [`with neutral variant ${variant}`, { props: { variant, color: 'neutral' } }]),
    // ['with ariaLabel', { attrs: { 'aria-label': 'Aria label' } }],
    ['with as', { props: { as: 'section' } }],
    ['with class', { props: { class: 'absolute' } }],
    ['with ui', { props: { ui: { base: 'rounded-full' } } }],
    // Slots
    ['with clearable and a value', { props: { clearable: true, modelValue: 'text' } }],
    ['with clearable and no value', { props: { clearable: true } }],
    ['with clearable and clearIcon', { props: { clearable: true, modelValue: 'text', clearIcon: 'i-lucide-x' } }],
    ['with clearable and disabled', { props: { clearable: true, modelValue: 'text', disabled: true } }],
    ['with clearable and trailingIcon', { props: { clearable: true, modelValue: 'text', trailingIcon: 'i-lucide-arrow-right' } }],
    ['with default slot', { slots: { default: () => 'Default slot' } }],
    ['with leading slot', { slots: { leading: () => 'Leading slot' } }],
    ['with trailing slot', { slots: { trailing: () => 'Trailing slot' } }],
    ['with clear slot', { props: { clearable: true, modelValue: 'text' }, slots: { clear: () => 'Clear slot' } }]
  ])('renders %s correctly', async (nameOrHtml: string, options: { props?: RobotbasInputProps, slots?: Partial<RobotbasInputSlots> }) => {
    const html = await ComponentRender(nameOrHtml, options, RobotbasInput)
    expect(html).toMatchSnapshot()
  })

  it.each([
    ['with .trim modifier', { props: { modelModifiers: { trim: true } } }, { input: 'input  ', expected: 'input' }],
    ['with .number modifier', { props: { modelModifiers: { number: true } } }, { input: '42', expected: 42 }],
    ['with .lazy modifier', { props: { modelModifiers: { lazy: true } } }, { input: 'input', expected: 'input' }],
    ['with .nullable modifier', { props: { modelModifiers: { nullable: true } } }, { input: '', expected: null }],
    ['with .optional modifier', { props: { modelModifiers: { optional: true } } }, { input: '', expected: undefined }]
  ])('%s works', async (_nameOrHtml: string, options: { props?: any, slots?: any }, spec: { input: any, expected: any }) => {
    const wrapper = mount(RobotbasInput, {
      ...options
    })

    const input = wrapper.find('input')
    await input.setValue(spec.input)

    expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [[spec.expected]] })
  })

  it('passes accessibility tests', async () => {
    const wrapper = await mountSuspended(RobotbasInput, {
      props: {
        placeholder: 'Enter text...'
      }
    })

    expect(await axe(wrapper.element, {
      rules: { region: { enabled: false } }
    })).toHaveNoViolations()
  })

  test('with .lazy modifier updates on change only', async () => {
    const wrapper = mount(RobotbasInput, {
      props: {
        modelModifiers: { lazy: true }
      }
    })

    const input = wrapper.find('input')
    await input.trigger('update')
    expect(wrapper.emitted()).toMatchObject({})

    await input.trigger('change')
    expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [['']] })
  })

  describe('emits', () => {
    test('update:modelValue event', async () => {
      const wrapper = mount(RobotbasInput)
      const input = wrapper.find('input')
      await input.setValue('bob@dylan.com')
      expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [['bob@dylan.com']] })
    })

    test('change event', async () => {
      const wrapper = mount(RobotbasInput)
      const input = wrapper.find('input')
      await input.setValue('bob@dylan.com')
      expect(wrapper.emitted()).toMatchObject({ change: [[{ type: 'change' }]] })
    })

    test('blur event', async () => {
      const wrapper = mount(RobotbasInput)
      const input = wrapper.find('input')
      await input.trigger('blur')
      expect(wrapper.emitted()).toMatchObject({ blur: [[{ type: 'blur' }]] })
    })
  })

  describe('clearable', () => {
    const findClear = (wrapper: any) => wrapper.find('[data-slot="clearButton"]')

    test('is not rendered without the prop', async () => {
      const wrapper = mount(RobotbasInput, { props: { modelValue: 'text' } })
      expect(findClear(wrapper).exists()).toBe(false)
    })

    test('is not rendered while the input is empty', async () => {
      const wrapper = mount(RobotbasInput, { props: { clearable: true, modelValue: '' } })
      expect(findClear(wrapper).exists()).toBe(false)
    })

    test('is not rendered while the input is disabled', async () => {
      const wrapper = mount(RobotbasInput, { props: { clearable: true, modelValue: 'text', disabled: true } })
      expect(findClear(wrapper).exists()).toBe(false)
    })

    test('appears as soon as the input holds a value', async () => {
      const wrapper = mount(RobotbasInput, { props: { clearable: true, modelValue: '' } })
      expect(findClear(wrapper).exists()).toBe(false)

      await wrapper.setProps({ modelValue: 'text' })
      expect(findClear(wrapper).exists()).toBe(true)
    })

    test('empties the input and emits both events', async () => {
      const wrapper = mount(RobotbasInput, { props: { clearable: true, modelValue: 'text' } })

      await findClear(wrapper).trigger('click')

      expect(wrapper.emitted()).toMatchObject({
        'update:modelValue': [['']],
        'clear': [[]]
      })
    })

    test('honours the v-model modifiers when clearing', async () => {
      const wrapper = mount(RobotbasInput, {
        props: { clearable: true, modelValue: 'text', modelModifiers: { nullable: true } }
      })

      await findClear(wrapper).trigger('click')

      expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [[null]] })
    })

    test('falls back to a × when no clearIcon is given', async () => {
      const wrapper = mount(RobotbasInput, { props: { clearable: true, modelValue: 'text' } })
      expect(findClear(wrapper).text()).toBe('×')
    })

    test('has an accessible name', async () => {
      const wrapper = mount(RobotbasInput, {
        props: { clearable: true, modelValue: 'text', clearLabel: 'Empty the field' }
      })
      expect(findClear(wrapper).attributes('aria-label')).toBe('Empty the field')
    })

    test('stays out of the tab order so Tab reaches the next field', async () => {
      const wrapper = mount(RobotbasInput, { props: { clearable: true, modelValue: 'text' } })
      expect(findClear(wrapper).attributes('tabindex')).toBe('-1')
    })

    test('passes accessibility tests', async () => {
      const wrapper = await mountSuspended(RobotbasInput, {
        props: { clearable: true, modelValue: 'text', placeholder: 'Enter text...' }
      })

      expect(await axe(wrapper.element, {
        rules: { region: { enabled: false } }
      })).toHaveNoViolations()
    })
  })

  // describe('form integration', async () => {
  //   async function createForm(validateOn?: FormInputEvents[], eagerValidation?: boolean) {
  //     const wrapper = await renderForm({
  //       props: {
  //         validateOn,
  //         validateOnInputDelay: 0,
  //         async validate(state: any) {
  //           if (state.value !== 'valid')
  //             return [{ name: 'value', message: 'Error message' }]
  //           return []
  //         }
  //       },
  //       slotTemplate: `
  //       <UFormField name="value" :eager-validation="eagerValidation">
  //         <UInput id="input" v-model="state.value" />
  //       </UFormField>
  //       `,
  //       slotVars: {
  //         eagerValidation
  //       }
  //     })
  //     const input = wrapper.find('#input')
  //     return {
  //       wrapper,
  //       input
  //     }
  //   }

  //   test('validate on blur works', async () => {
  //     const { input, wrapper } = await createForm(['blur'])
  //     await input.trigger('blur')
  //     await flushPromises()
  //     expect(wrapper.text()).toContain('Error message')

  //     await input.setValue('valid')
  //     await input.trigger('blur')
  //     await flushPromises()
  //     expect(wrapper.text()).not.toContain('Error message')
  //   })

  //   test('validate on change works', async () => {
  //     const { input, wrapper } = await createForm(['change'])
  //     await input.trigger('change')
  //     await flushPromises()
  //     expect(wrapper.text()).toContain('Error message')

  //     input.setValue('valid')
  //     await input.trigger('change')
  //     await flushPromises()
  //     expect(wrapper.text()).not.toContain('Error message')
  //   })

  //   test('validate on input works', async () => {
  //     const { input, wrapper } = await createForm(['input'], true)
  //     await input.setValue('value')
  //     await flushPromises()
  //     expect(wrapper.text()).toContain('Error message')

  //     await input.setValue('valid')
  //     await flushPromises()
  //     expect(wrapper.text()).not.toContain('Error message')
  //   })

  //   test('validate on input without eager validation works', async () => {
  //     const { input, wrapper } = await createForm(['input'])

  //     await input.setValue('value')
  //     await flushPromises()
  //     expect(wrapper.text()).not.toContain('Error message')

  //     await input.trigger('blur')

  //     await input.setValue('value')
  //     await flushPromises()
  //     expect(wrapper.text()).toContain('Error message')

  //     await input.setValue('valid')
  //     await flushPromises()
  //     expect(wrapper.text()).not.toContain('Error message')
  //   })
  // })
})
